[package]
name = "logp"
version = "0.1.0"
authors = ["Arc <attobop@gmail.com>"]
edition = "2021"
description = "Information theory primitives: entropy, KL divergence, mutual information"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/logp"
keywords = ["entropy", "information-theory", "kl-divergence", "mutual-information"]
categories = ["algorithms", "science", "mathematics"]

[dependencies]
minilp = "0.2.2"
rand = "0.9"
thiserror = "2.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"

[[bench]]
name = "entropy_bench"
harness = false
