[package]
name = "logp"
version = "0.1.0"
edition = "2021"
authors = ["Arc <attobop@gmail.com>"]
description = "Information theory primitives: entropies and divergences (KL, JS, f-divergences, Bregman)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/tekne"
documentation = "https://docs.rs/logp"
keywords = ["information-theory", "entropy", "divergence", "bregman", "f-divergence"]
categories = ["algorithms", "science", "mathematics"]

[dependencies]
thiserror = "2.0"

[dev-dependencies]
proptest = "1.5"